kubernetes/other/whoami.yaml
# For simple end-to-end testing of IP Pools, Gateway API, and HTTP Routes.
# To verify:
# 1. Apply the whoami.yaml
# 2. In namespace 'whoami', confirm there is an external IP assigned to the
# LoadBalancer service.
# 3. Create an A record 'whoami.local' pointing to the external IP.
# 4. Visit 'whoami.local' and verify that it loads.

# Namespace
kind: Namespace
apiVersion: v1
metadata:
  name: whoami
  labels:
    name: whoami
---
# Application to expose
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
---
# Service to reach the application on the cluster
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: whoami
  selector:
    app: whoami
---
# Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whoami
  namespace: whoami
spec:
  gatewayClassName: cilium
  listeners:
    - name: whoami
      hostname: "whoami.local"
      protocol: HTTP
      port: 80
---
# HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-httproute
  namespace: whoami
spec:
  parentRefs:
    - name: whoami
      namespace: whoami
      sectionName: whoami
  hostnames:
    - whoami.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          namespace: whoami
          port: 80
